# pytest-playwright-tests

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  pyproject.toml  start.sh
.github/workflows/: docker-image.yml  trigger-tests.yaml
pages/: base_page.py  cart_page.py  checkout_complete_page.py  checkout_page.py  inventory_page.py  login_page.py
tests/cart/: cart_test.py
tests/checkout/: checkout_test.py
tests/inventory/: inventory_test.py
tests/login/: login_invalid_test.py  login_test.py
tests/success_order/: success_order_test.py
utilities/texts/: texts.py
utilities/users/: users.py
