[tool.pytest.ini_options]
addopts = "-v --strict-markers"
markers = [
    "login: Login tests",
    "smoke: Smoke tests",
    "errors: All tests that perform some error",
    "all: All existing tests for Swag Labs"
]

[project]
name = "pytest-playwright-tests"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitor Almeida Pires",email = "vitoralmeidapires@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "allure-pytest (>=2.13.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pytest_playwright_tests", from = "src"}]


[tool.poetry.group.dev.dependencies]
playwright = "^1.51.0"
taskipy = "^1.14.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
default_task = "poetry run pytest --alluredir=./results "
test_headed = "task default_task --headed -m "
test = "task default_task -m "
test_webkit = "task default_task --browser webkit -m "
test_firefox = "task default_task --browser firefox -m "
test_local = "task default_task --local_debug --headed -m "
lint = "black --line-length 120 ."