[tool.pytest.ini_options]
addopts = "-v -s --strict-markers"
markers = [
    "login: Login tests",
    "smoke: Smoke tests",
    "errors: All tests that perform some error",
    "test_login_page_is_loaded: simple test if the login page is properly loaded",
    "test_locked_out_user_error: user cant login because is locked out",
    "test_standard_user_submit_simple_order: standard user submits a simple new order",
    "all: All existing tests for Swag Labs"
]

[project]
name = "pytest-playwright-tests"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitor Almeida Pires",email = "vitoralmeidapires@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "allure-pytest (>=2.13.5,<3.0.0)",
    "retry (>=0.9.2,<0.10.0)"
]

[tool.poetry]
packages = [{include = "pytest_playwright_tests", from = "src"}]


[tool.poetry.group.dev.dependencies]
playwright = "^1.51.0"
taskipy = "^1.14.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
default_task = "poetry run pytest --alluredir=./results "
test_headed = "task default_task --headed -m "
test = "task default_task -m "
test_all = "task default_task -m all"
test_webkit = "task default_task --browser webkit -m "
test_firefox = "task default_task --browser firefox -m "
test_local = "task default_task --local_debug --headed -m "
lint = "black --line-length 120 ."